design: fixed layout height and completely hidden scrollbar in settings

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,3 +81,11 @@ body::before {
 * {
   @apply transition-colors duration-200;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
